{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 219,
  "lineage": "178d5821-374d-44b5-053c-8e3a6fdcaa86",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/natGateways/n8n-app-nat-gateway",
            "idle_timeout_in_minutes": 10,
            "location": "eastus",
            "name": "n8n-app-nat-gateway",
            "resource_group_name": "n8n-rg",
            "resource_guid": "2d25844c-89f0-42cb-9692-e39e837530fd",
            "sku_name": "Standard",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "n8n-app-nat-gateway",
              "Project": "n8n-app"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/natGateways/n8n-app-nat-gateway|/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/publicIPAddresses/n8n-app-nat-pip",
            "nat_gateway_id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/natGateways/n8n-app-nat-gateway",
            "public_ip_address_id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/publicIPAddresses/n8n-app-nat-pip"
          },
          "dependencies": [
            "azurerm_nat_gateway.main",
            "azurerm_public_ip.nat",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/networkSecurityGroups/n8n-app-aks-nodes-nsg",
            "location": "eastus",
            "name": "n8n-app-aks-nodes-nsg",
            "resource_group_name": "n8n-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPSInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPInbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "n8n-app-aks-nodes-nsg",
              "Project": "n8n-app"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "aks_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/networkSecurityGroups/n8n-app-aks-nodes-nsg/securityRules/AllowHTTPInbound",
            "name": "AllowHTTPInbound",
            "network_security_group_name": "n8n-app-aks-nodes-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "n8n-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.aks_nodes",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "aks_https_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/networkSecurityGroups/n8n-app-aks-nodes-nsg/securityRules/AllowHTTPSInbound",
            "name": "AllowHTTPSInbound",
            "network_security_group_name": "n8n-app-aks-nodes-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "n8n-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.aks_nodes",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/publicIPAddresses/n8n-app-nat-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.172.231.153",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "n8n-app-nat-pip",
            "resource_group_name": "n8n-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "n8n-app-nat-pip",
              "Project": "n8n-app"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.100.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-private-subnet-1",
            "name": "n8n-app-private-subnet-1",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "n8n-rg",
            "virtual_network_name": "n8n-app-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.101.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-private-subnet-2",
            "name": "n8n-app-private-subnet-2",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "n8n-rg",
            "virtual_network_name": "n8n-app-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.102.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-private-subnet-3",
            "name": "n8n-app-private-subnet-3",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "n8n-rg",
            "virtual_network_name": "n8n-app-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-public-subnet-1",
            "name": "n8n-app-public-subnet-1",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "n8n-rg",
            "virtual_network_name": "n8n-app-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-public-subnet-2",
            "name": "n8n-app-public-subnet-2",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "n8n-rg",
            "virtual_network_name": "n8n-app-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-public-subnet-3",
            "name": "n8n-app-public-subnet-3",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "n8n-rg",
            "virtual_network_name": "n8n-app-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-private-subnet-1",
            "nat_gateway_id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/natGateways/n8n-app-nat-gateway",
            "subnet_id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-private-subnet-1"
          },
          "dependencies": [
            "azurerm_nat_gateway.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.private",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-private-subnet-2",
            "nat_gateway_id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/natGateways/n8n-app-nat-gateway",
            "subnet_id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-private-subnet-2"
          },
          "dependencies": [
            "azurerm_nat_gateway.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.private",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-private-subnet-3",
            "nat_gateway_id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/natGateways/n8n-app-nat-gateway",
            "subnet_id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-private-subnet-3"
          },
          "dependencies": [
            "azurerm_nat_gateway.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.private",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-private-subnet-1",
            "network_security_group_id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/networkSecurityGroups/n8n-app-aks-nodes-nsg",
            "subnet_id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-private-subnet-1"
          },
          "dependencies": [
            "azurerm_network_security_group.aks_nodes",
            "azurerm_resource_group.main",
            "azurerm_subnet.private",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-private-subnet-2",
            "network_security_group_id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/networkSecurityGroups/n8n-app-aks-nodes-nsg",
            "subnet_id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-private-subnet-2"
          },
          "dependencies": [
            "azurerm_network_security_group.aks_nodes",
            "azurerm_resource_group.main",
            "azurerm_subnet.private",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-private-subnet-3",
            "network_security_group_id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/networkSecurityGroups/n8n-app-aks-nodes-nsg",
            "subnet_id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-private-subnet-3"
          },
          "dependencies": [
            "azurerm_network_security_group.aks_nodes",
            "azurerm_resource_group.main",
            "azurerm_subnet.private",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d5c74465-2a4a-4134-ab3f-33803f9039eb",
            "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet",
            "location": "eastus",
            "name": "n8n-app-vnet",
            "resource_group_name": "n8n-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-public-subnet-1",
                "name": "n8n-app-public-subnet-1"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-public-subnet-2",
                "name": "n8n-app-public-subnet-2"
              },
              {
                "address_prefix": "10.0.100.0/24",
                "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-private-subnet-1",
                "name": "n8n-app-private-subnet-1",
                "security_group": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/networkSecurityGroups/n8n-app-aks-nodes-nsg"
              },
              {
                "address_prefix": "10.0.101.0/24",
                "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-private-subnet-2",
                "name": "n8n-app-private-subnet-2",
                "security_group": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/networkSecurityGroups/n8n-app-aks-nodes-nsg"
              },
              {
                "address_prefix": "10.0.102.0/24",
                "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-private-subnet-3",
                "name": "n8n-app-private-subnet-3",
                "security_group": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/networkSecurityGroups/n8n-app-aks-nodes-nsg"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/013c5d82-8670-4c50-81d1-1c84a77a8303/resourceGroups/n8n-rg/providers/Microsoft.Network/virtualNetworks/n8n-app-vnet/subnets/n8n-app-public-subnet-3",
                "name": "n8n-app-public-subnet-3"
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "n8n-app-vnet",
              "Project": "n8n-app"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}